--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>LinkShort Pro | Free Link Shortener & QR Code Generator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles1.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -237,6 +237,6 @@
         </footer>
     </div>
 
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
