--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <meta property="og:title" content="LinkShort Pro | Free Link Shortener & QR Code Generator">
     <meta property="og:description" content="Create short links, branded URLs, and QR codes with analytics. The most reliable free link management tool.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourdomain.com">
-    <meta property="og:image" content="https://yourdomain.com/images/preview.jpg">
+    <meta property="og:url" content="https://alxpace.in">
+    <meta property="og:image" content="https://alxpace.in/images/preview.jpg">
     <meta name="twitter:card" content="summary_large_image">
-    <link rel="canonical" href="https://yourdomain.com">
+    <link rel="canonical" href="https://alxpace.in">
     <title>LinkShort Pro | Free Link Shortener & QR Code Generator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -224,9 +224,10 @@
                 <div class="footer-section">
                     <h3>Connect</h3>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="https://x.com/Ax68759673"><i class="fab fa-twitter"></i></a>
+                        <a href="https://in.linkedin.com/in/sharma-rahul-alx"><i class="fab fa-linkedin"></i></a>
+                        <a href="github.com/rahul-sharma-alx"><i class="fab fa-github"></i></a>
+                        <a href="https://devstackrahul.netlify.app/"><i class="fa-solid fa-address-card"></i></a>
                     </div>
                 </div>
             </div>
